# so101-mujoco

./: slides.typ
so101/: so101.urdf
src/: circular_path.py  hand_tracking.py  keyboard_control_rerun.py  pyproject.toml  workspace_analysis.py
